src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__delete_confirm__tests__draw_blocks_delete_custom_keymap_one_two_definition.snap
---
source: src/core/status/ui/draw_blocks/delete_confirm.rs
expression: setup.terminal.backend()
---
"                                                                                  "
"        ╭──────────────────────── Confirm Delete ────────────────────────╮        "
"        │                                                                │        "
"        │     Are you sure you want to delete container: container_1     │        "
"        │                                                                │        "
"        │      ╭─────────────────────╮      ╭─────────────────────╮      │        "
"        │      │   ( End | Up ) no   │      │     ( F10 ) yes     │      │        "
"        │      ╰─────────────────────╯      ╰─────────────────────╯      │        "
"        ╰────────────────────────────────────────────────────────────────╯        "
"                                                                                  "
